# stracker

./: .gitignore  LICENSE  README.md  docker-compose.yml  netlify.toml
backend/.devcontainer/: devcontainer.json
backend/dev_env/: Dockerfile  requirements.txt
backend/nginx/: nginx.conf
backend/services/job_service/: Dockerfile  pyproject.toml
backend/services/job_service/config/: supervisord.conf
backend/services/job_service/config/init.d/: celerybeat_config  celeryd_config
backend/services/job_service/job_service/api/: api.py  command.txt  jobs_pb2.py  jobs_pb2_grpc.py  server.py
backend/services/job_service/job_service/jobs/: celery_app.py  defs.py  stock_list_fetcher.py  stock_price_fetcher.py  store.py  tasks.py
backend/services/job_service/job_service/proto/: jobs.proto
backend/services/stock_service/: Dockerfile  gunicorn.sh  manage.py  pyproject.toml
backend/services/stock_service/stock_info/: apps.py  views.py
backend/services/stock_service/stock_service/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Routes.js  api.js
frontend/src/layouts/Main/components/Footer/: Footer.js
frontend/src/layouts/Main/components/Sidebar/: Sidebar.js
frontend/src/layouts/Main/components/Topbar/: Topbar.js
frontend/src/views/Account/: Account.js
frontend/src/views/Account/components/: index.js
frontend/src/views/Dashboard/: Dashboard.js
frontend/src/views/Dashboard/components/: index.js
store/: Dockerfile  redis.conf
(+20 files in other folders)
