[tool.poetry]
name = "stock_service"
version = "0.1.0"
description = ""
authors = ["Mo Husseini <mhusseini1208@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
django-redis = "^4.12.1"
pandas = "^1.0.5"
djangorestframework = "^3.11.0"
requests = "^2.24.0"
django-cors-headers = "^3.4.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
